--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,9 @@
   "dependencies": {
     "bootstrap": "4.3.1",
     "chart.js": "2.8.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "firebase": "^7.2.1",
     "history": "4.9.0",
     "node-sass": "4.12.0",
